# trustless-attestation-verification-circom

./: .gitmodules  Dockerfile  Makefile  README.md  circomkit.json  package.json
circuits/: ca.circom  cert_verify.circom  helper.circom  mgf1sha384.circom  report_verify.circom  rsa.circom  verify_genoa_cert_1.circom  verify_genoa_cert_2.circom  verify_genoa_cert_3.circom  verify_genoa_report.circom
docs/: CLI.md  design.md  known-issues.md
tool/: Cargo.toml
tool/src/: main.rs
