[package]
name = "trustless_attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
json = "0.12.4"
log = "0.4.22"
p384 = { version = "0.13.0", features = ["ecdsa-core"] }
rand = "0.8.5"
ring = { version = "0.17.8", features = ["std"] }
rsa = { version = "0.9.6", features = ["sha2"] }
sev = "4.0.0"
sha2 = "0.10.8"
x509-cert = "0.2.5"
